# CRUD

./: README.md  package-lock.json
Backend/: pyproject.toml
Backend/crud/: settings.py  urls.py
Backend/myapp/: urls.py
Frontend/crud/app/: page.tsx
Frontend/crud/app/sidebars/: left.tsx
app/: layout.tsx
app/sidebars/: right.tsx
